--- a/index.html
+++ b/index.html
@@ -8,21 +8,19 @@
     <title>Document</title>
 </head>
 <body>
-        <div class="container">
-            <img src="img/MyPic.jpg" alt="Profile Picture" class="profile-picture">
-                <h1 class="name">Hi! I am John Paul</h1>
-                <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Quibusdam optio officiis, animi velit, in amet distinctio ad porro illum 
-                    accusantium soluta ipsa molestias sequi. Quas tenetur in voluptates tempora 
-                    architecto reiciendis? Dolore et dolorum saepe voluptate repellendus sapiente, 
-                    quaerat enim impedit esse soluta.
-                </p>
+     <div class="container">
+        <img src="img/MyPic.jpg" alt="Profile Picture" class="profile-picture">
+            <h1 class="name">Hi! I am John Paul</h1>
+            <p class="bio">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+               Quibusdam optio officiis, animi velit, in amet distinctio ad porro illum 
+               accusantium soluta ipsa molestias sequi.
+            </p>
         
-                <a href="https://www.facebook.com/senseihatakekakashi" target="_blank" class="social-link">
-                    <img src="img/facebook.png" alt="Social Icon" class="social-icon">
-                    <span>https://www.facebook.com/senseihatakekakashi</span>
-                </a>
-        </div>
+            <a href="https://www.facebook.com/iPaulllllll" target="_blank" class="social-link">
+               <img src="img/facebook.png" alt="Social Icon" class="social-icon">
+              <span>https://www.facebook.com/iPaulllllll</span>
+            </a>
+    </div>
     
 </body>
 </html>
